Fixed focalboard overflow issues finally

--- a/components/databases/focalboard/src/components/centerPanel.scss
+++ b/components/databases/focalboard/src/components/centerPanel.scss
@@ -14,9 +14,8 @@
 
 .BoardComponent {
     flex: 1 1 auto;
-    display: flex;
-    flex-direction: column;
     overflow: hidden;
+    padding-bottom: 20px;
 
     > * {
 
