--- a/theme/focalboard/focalboard.main.scss
+++ b/theme/focalboard/focalboard.main.scss
@@ -4,9 +4,6 @@ html {
 
 .focalboard-body,
 #focalboard-app {
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
   width: 100%;
   color: rgb(var(--center-channel-color-rgb));
   background: rgb(var(--center-channel-bg-rgb));
